--- a/css/new-index.css
+++ b/css/new-index.css
@@ -5,11 +5,18 @@ header {width: 100%; display: flex; flex-direction: column; justify-content: cen
 /* header .header-bar-ui {display: flex; flex-direction: row; justify-content: center; align-items: center; padding: 0px 24px; position: static; width: 720px; height: 800px; left: 180px; top: 0px; flex: none; order: 0; flex-grow: 0; margin: 0px 0px;} */
 .header-bar-ui {display: flex; flex-direction: row; justify-content: center; align-items: center; padding: 0px 24px; position: static; width: 720px; left: 180px; top: 0px; flex: none; order: 0; flex-grow: 0; margin: 0px 0px;}
 
-header .header-menu-select {vertical-align: middle; text-align: left; font-size: 30px; line-height: 20px; color: #020202; font-style: normal;}
+header .header-menu-select {position: static; width: 32px;  top: 24px; left: 24px; top: 30%; bottom: 30%; font-size: 24px; flex: none; order: 0; flex-grow: 0; margin: 0px 6px;}
+/* header .header-menu-select {vertical-align: middle; text-align: left; font-size: 30px; line-height: 20px; color: #020202; font-style: normal;} */
 header .header-menu-logo {vertical-align: middle; text-align: center;}
 
 .header-menu-select span {font-size: 100%;}
 .header-menu-logo img {width: 90px; height: 52px;}
 
 main {width: 100%;}
+.first-contents {width: 100%; height: 900px;}
+.second-contents {width: 100%; height: 900px;}
+.third-contents {width: 100%; height: 900px;}
+
 footer {width: 100%;}
+.footer-bar {width: 100%; height: 500px;}
+.bottom-bar {width: 100%; height: 200px;}
