--- a/css/new-index.css
+++ b/css/new-index.css
@@ -7,10 +7,12 @@ header {width: 100%; display: flex; flex-direction: column; justify-content: cen
 
 header .header-menu-select {position: static; width: 32px;  top: 24px; left: 24px; top: 30%; bottom: 30%; font-size: 24px; flex: none; order: 0; flex-grow: 0; margin: 0px 6px;}
 /* header .header-menu-select {vertical-align: middle; text-align: left; font-size: 30px; line-height: 20px; color: #020202; font-style: normal;} */
-header .header-menu-logo {vertical-align: middle; text-align: center;}
-
-.header-menu-select span {font-size: 100%;}
-.header-menu-logo img {width: 90px; height: 52px;}
+/* header .header-menu-logo {vertical-align: middle; text-align: center;} */
+header .header-menu-logo {display: flex; flex-direction: column; align-items: center; padding: 0px; position: static; width: 596px; height: 44.61px; left: 62px; top: 17.6px; flex: none; order: 1; flex-grow: 1; margin: 0px 6px;}
+.header-menu-logo .header-menu-logo-inner {position: static; padding-left: 262.5; padding-right: 262.5; top: 0%; bottom: 0%;}
+.header-menu-logo .header-menu-logo-inner img {width: 83px; height: 44.61px;}
+/* .header-menu-select span {font-size: 100%;} */
+/* .header-menu-logo img {width: 90px; height: 52px;} */
 
 main {width: 100%;}
 .first-contents {width: 100%; height: 900px;}
