--- a/css/new-index.css
+++ b/css/new-index.css
@@ -1,9 +1,9 @@
 *{margin: 0 auto; padding: 0;}
-body {width: 100%; background: #fff; max-width: 600px;}
+body {width: 100%; background: #fff; max-width: 720px; -webkit-overflow-scrolling: touch;}
 /* header {width: 100%; height: 82px; vertical-align: top; line-height: 16px;} */
 header {width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 0px; position: absolute; height: 80px; left: 0px; right: 0px; top: 0px;}
 /* header .header-bar-ui {display: flex; flex-direction: row; justify-content: center; align-items: center; padding: 0px 24px; position: static; width: 720px; height: 800px; left: 180px; top: 0px; flex: none; order: 0; flex-grow: 0; margin: 0px 0px;} */
-.header-bar-ui {display: flex; flex-direction: row; justify-content: center; align-items: center; padding: 0px 24px; position: static; width: 720px; left: 180px; top: 0px; flex: none; order: 0; flex-grow: 0; margin: 0px 0px;}
+.header-bar-ui {display: flex; flex-direction: row; justify-content: center; align-items: center; position: static; width: 720px; left: 180px; top: 0px; flex: none; order: 0; flex-grow: 0; margin: 0px 0px;}
 
 header .header-menu-select {position: static; width: 32px;  top: 24px; left: 24px; top: 30%; bottom: 30%; font-size: 24px; flex: none; order: 0; flex-grow: 0; margin: 0px 6px;}
 /* header .header-menu-select {vertical-align: middle; text-align: left; font-size: 30px; line-height: 20px; color: #020202; font-style: normal;} */
