--- a/css/new-index.css
+++ b/css/new-index.css
@@ -1,8 +1,9 @@
 *{margin: 0 auto; padding: 0;}
 body {width: 100%; background: #fff; max-width: 720px; -webkit-overflow-scrolling: touch;}
 /* header {width: 100%; height: 82px; vertical-align: top; line-height: 16px;} */
-header {width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 0px; position: absolute; height: 80px; left: 0px; right: 0px; top: 0px;}
+header {width: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; padding: 0px; position: absolute; height: 80px; left: 0px; right: 0px; top: 0px; position: -webkit-sticky; position: sticky;}
 /* header .header-bar-ui {display: flex; flex-direction: row; justify-content: center; align-items: center; padding: 0px 24px; position: static; width: 720px; height: 800px; left: 180px; top: 0px; flex: none; order: 0; flex-grow: 0; margin: 0px 0px;} */
+header:after {width: 100%; justify-content: center; align-items: center; padding: 0px; position: absolute; height: 80px; left: 0px; right: 0px; top: 0px;}
 .header-bar-ui {display: flex; flex-direction: row; justify-content: center; align-items: center; position: static; width: 720px; left: 180px; top: 0px; flex: none; order: 0; flex-grow: 0; margin: 0px 0px;}
 
 header .header-menu-select {position: static; width: 32px;  top: 24px; left: 24px; top: 30%; bottom: 30%; font-size: 24px; flex: none; order: 0; flex-grow: 0; margin: 0px 6px;}
@@ -14,7 +15,7 @@ header .header-menu-logo {display: flex; flex-direction: column; align-items: ce
 /* .header-menu-select span {font-size: 100%;} */
 /* .header-menu-logo img {width: 90px; height: 52px;} */
 
-.header-bar-ui:before,
+/* .header-bar-ui:before,
 .header-bar-ui:after{
     content: '';
     position: fixed;
@@ -29,14 +30,14 @@ header .header-menu-logo {display: flex; flex-direction: column; align-items: ce
     pointer-events: none;
 }
 .header-bar-ui:after{
-    /*height:80px;*/
+    height:80px;
     top:0;
     height:136px;
     background-color:#fff;
     border-bottom:1px solid #ebebeb;
     z-index:-1;
     pointer-events: none;
-}
+} */
 
 main {width: 100%;}
 .first-contents {width: 100%; height: 900px;}
