--- a/css/header-ui.css
+++ b/css/header-ui.css
@@ -3,7 +3,7 @@
 *{-webkit-box-sizing: border-box; box-sizing: border-box;}
 body {-webkit-overflow-scrolling: touch;}
 #wrap {background-color: #f4f4f4;}
-#wrap:before {content: '';position: fixed; width: 100%; top: 0; left: 0; right: 0; bottom: 0; z-index: -3; background-color: #f4f4f4; pointer-events: none;}
+#wrap:before {content: ''; position: fixed; width: 100%; top: 0; left: 0; right: 0; bottom: 0; z-index: -3; background-color: #f4f4f4; pointer-events: none;}
 /* .inner-wrap {display: flex; flex-direction: column; align-items: center; padding: 0 0 40px; position: static; flex: none; order: 1; flex-grow: 1; margin: 0px 0px;} */
 .inner-wrap {display: flex; flex-direction: column; min-height: 100%; height: 1px;}
 
@@ -22,7 +22,10 @@ body {-webkit-overflow-scrolling: touch;}
 .layout-header:before {top: 80px; height: 1px; background-color: #ebebeb; z-index: 0; pointer-events: none;}
 .layout-header:after {top: 0; height: 136px; background-color: #fff; border-bottom: 1px solid #ebebeb; z-index: -1; pointer-events: none;}
 
-.layout-header-logo img {width: 90px; height: 90px;}
+.layout-header-logo {position: absolute; left: 62px; right: 62px; top: 25px; z-index: 1; height: 30px; display: flex; align-items: center; justify-content: center; pointer-events: none;}
+.layout-header-logo > *{pointer-events: auto;}
+.layout-header-logo-img {height: 30px;}
+/* .layout-header-logo img {width: 90px; height: 90px;} */
 /* .layout-header-logo-size {} */
 
 .layout-header-title {text-align: center; align-items: center; }
