[Feature] - Align images

--- a/css/header-ui.css
+++ b/css/header-ui.css
@@ -4,12 +4,12 @@
 body {-webkit-overflow-scrolling: touch;}
 #wrap {background-color: #f4f4f4;}
 #wrap:before {content: ''; position: fixed; width: 100%; top: 0; left: 0; right: 0; bottom: 0; z-index: -3; background-color: #f4f4f4; pointer-events: none;}
-/* .inner-wrap {display: flex; flex-direction: column; align-items: center; padding: 0 0 40px; position: static; flex: none; order: 1; flex-grow: 1; margin: 0px 0px;} */
 .inner-wrap {display: flex; flex-direction: column; min-height: 100%; height: 1px;}
+/* .inner-wrap {display: flex; flex-direction: column; align-items: center; padding: 0 0 40px; position: static; flex: none; order: 1; flex-grow: 1; margin: 0px 0px;} */
 
 /* Body */
-/* .layout-header {width: 720px; height: 80px; display: flex; top: 0; left: 180; right: 180; flex-direction: column; justify-content: center; align-items: center; padding: 0px 24px; position: static; background: #fff;} */
 .layout-header {position: fixed; left: 0; right: 0; top: 0; z-index: 10; display: flex; align-items: center; justify-content: center; width: 720px; height: 136px; margin: 0 auto; padding-left: 100px; padding-right: 100px; padding-top: 80px; background-color: #fff;}
+/* .layout-header {width: 720px; height: 80px; display: flex; top: 0; left: 180; right: 180; flex-direction: column; justify-content: center; align-items: center; padding: 0px 24px; position: static; background: #fff;} */
 @media (max-width: 720px) {
     .layout-header {width: 100%;}
 }
@@ -24,12 +24,16 @@ body {-webkit-overflow-scrolling: touch;}
 
 .layout-header-logo {position: absolute; left: 62px; right: 62px; top: 25px; z-index: 1; height: 30px; display: flex; align-items: center; justify-content: center; pointer-events: none;}
 .layout-header-logo > *{pointer-events: auto;}
-.layout-header-logo-img {height: 30px;}
+.layout-header-logo img {height: 30px;}
+
+.layout-header-gnb-selector {position: relative; top: -68px; display: inline-flex; justify-content: center; vertical-align: center;}
+.layout-header-gnb-selector img {width: 45px; height: 30px}
+
 /* .layout-header-logo img {width: 90px; height: 90px;} */
 /* .layout-header-logo-size {} */
 
-.layout-header-title {text-align: center; align-items: center; }
-.layout-header-gnb-selector img {width: 60px; height: 60px;}
+.layout-header-title {position: absolute; display: inline-flex; text-align: center; align-items: center; justify-content: center; vertical-align: middle;}
+/* .layout-header-gnb-selector img {width: 60px; height: 60px;} */
 
 
 /* Main */
