--- a/css/header-ui.css
+++ b/css/header-ui.css
@@ -32,7 +32,7 @@ body {-webkit-overflow-scrolling: touch;}
 .layout-header-gnb-selector img {width: 45px; height: 30px}
 .layout-header-gnb-selector .gnb-selector-toggle {position: relative; top: -68px;}
 
-.layout-header-menu-selector {}
+/* .layout-header-menu-selector {} */
 
 /* Main */
 
