--- a/css/header-ui.css
+++ b/css/header-ui.css
@@ -41,11 +41,12 @@ body {-webkit-overflow-scrolling: touch;}
 .layout-design-guide-user {display: flex; align-items: center; justify-content: center; width: 80px; height: inherit;}
 .layout-design-guide-user .user-toggle {display: flex; align-items: center; justify-content: center;}
 .user-toggle .user-image {display: inline-block; width: 32px; height: 32px; font-size: 0; line-height: 0; color: transparent; user-select: none; background-position: 50% 50%; background-repeat: no-repeat; background-size: cover; overflow: hidden;}
-/* Main */
 
+/* Main */
+.layout-main-menu-selector {width: 100%; height: 3000px;}
+.layout-main-menu-selector .layout-main-menu {height: 300px;}
 
 /* Footer */
-
 
 
 @media screen {
