--- a/css/header-ui.css
+++ b/css/header-ui.css
@@ -44,9 +44,14 @@ body {-webkit-overflow-scrolling: touch;}
 .layout-design-guide-user .user-toggle {display: flex; align-items: center; justify-content: center;}
 .user-toggle .user-image {display: inline-block; width: 32px; height: 32px; font-size: 0; line-height: 0; color: transparent; user-select: none; background-position: 50% 50%; background-repeat: no-repeat; background-size: cover; overflow: hidden;}
 
+.layout-header-gnb-area {position: fixed; left: -375; top: 0; bottom: 0; width: 375px; display: flex; flex-direction: column; background-color: #fff; overflow: hidden;}
+/* @media (max-width: 414px) {
+    .layout-header-gnb-area
+} */
+
 /* Main */
-.layout-main-menu-selector {width: 100%; height: 3000px;}
-.layout-main-menu-selector .layout-main-menu {height: 300px;}
+.layout-main-guide {width: 100%; height: 3000px;}
+.layout-main-guide .layout-guide-container {height: 300px;}
 
 /* Footer */
 
