--- a/css/navigation-ui.css
+++ b/css/navigation-ui.css
@@ -110,7 +110,7 @@ body {-webkit-overflow-scrolling: touch;}
     padding: 0;
     margin: 0;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 .nav-grid .nav-grid-items {
     padding: 16px 10px;
