--- a/css/navigation-ui.css
+++ b/css/navigation-ui.css
@@ -97,8 +97,9 @@ body {-webkit-overflow-scrolling: touch;}
     border-radius: 100px;
     background: #f24c5e;
     position: relative;
-    margin: auto auto -4.2rem;
-    bottom: 8.6rem;
+    /* margin: auto auto -4.2rem; */
+    margin: 0 auto;
+    /* bottom: 8.6rem; */
     left: 0;
     display: none;
     justify-content: center;
