--- a/css/navigation-ui.css
+++ b/css/navigation-ui.css
@@ -92,9 +92,9 @@ body {-webkit-overflow-scrolling: touch;}
     width: 100%;
 }
 .wrap .nav-circle {
-    width: 1.5rem;
+    width: 100%;
     height: 0.6rem;
-    border-radius: 100px;
+    /* border-radius: 100px; */
     background: #f24c5e;
     position: relative;
     /* margin: auto auto -4.2rem; */
