--- a/css/navigation-ui.css
+++ b/css/navigation-ui.css
@@ -93,7 +93,8 @@ body {-webkit-overflow-scrolling: touch;}
 }
 .wrap .nav-circle {
     width: 100%;
-    height: 0.6rem;
+    height: 0.1rem;
+    /* height: 0.6rem; */
     /* border-radius: 100px; */
     background: #f24c5e;
     position: relative;
@@ -122,7 +123,8 @@ body {-webkit-overflow-scrolling: touch;}
 }
 .nav-grid .nav-grid-items .icon {
     color: #212121;
-    font-size: 2.8rem;
+    font-size: 16px;
+    /* font-size: 2.8rem; */
 }
 .nav-grid .nav-grid-items.active .icon {
     color: #f24c5e;
