--- a/css/navigation-ui.css
+++ b/css/navigation-ui.css
@@ -87,16 +87,16 @@ body {-webkit-overflow-scrolling: touch;}
     border-radius: 1rem;
     box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 1px 3px 0 rgba(0, 0, 0, .12);
 } */
-.wrap .active-grid-circle {
+.active-grid-circle {
     display: grid;
     width: 100%;
 }
-.wrap .nav-circle {
+.nav-circle {
     width: 100%;
     height: 0.1rem;
     /* height: 0.6rem; */
     /* border-radius: 100px; */
-    background: #f24c5e;
+    background: #333;
     position: relative;
     /* margin: auto auto -4.2rem; */
     margin: 0 auto;
@@ -115,6 +115,12 @@ body {-webkit-overflow-scrolling: touch;}
     grid-template-columns: 1fr 1fr 1fr;
 }
 .nav-grid .nav-grid-items {
+    position: relative;
+    line-height: 22px;
+    /* padding-left: 12px;
+    padding-right: 12px; */
+    font-size: 15px;
+    /* height: 56px; */
     padding: 16px 10px;
     display: flex;
     align-items: center;
@@ -122,12 +128,14 @@ body {-webkit-overflow-scrolling: touch;}
     cursor: pointer;
 }
 .nav-grid .nav-grid-items .icon {
-    color: #212121;
+    color: #959595;
     font-size: 16px;
     /* font-size: 2.8rem; */
 }
 .nav-grid .nav-grid-items.active .icon {
-    color: #f24c5e;
+    font-weight: 700;
+    letter-spacing: -0.03em;
+    color: #333;
 }
 .grid-item-active {
     display: flex !important;
