[Update] - Update codes

--- a/css/navigation-ui.css
+++ b/css/navigation-ui.css
@@ -69,130 +69,25 @@ body {-webkit-overflow-scrolling: touch;}
 
 }
 
-
-/* .container {
-    position: fixed;
-    margin: auto;
-    top: 400px;
-    left: 0;
-    width: 100%;
-    z-index: 999;
-} */
 .container {display: flex; align-items: center;}
-/* .wrap {} */
-/* .wrap {
-    width: 550px;
-    margin: 16px auto;
-    background: #FDFFFC;
-    border-radius: 1rem;
-    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 1px 3px 0 rgba(0, 0, 0, .12);
-} */
+.active-grid-circle {display: grid; width: 100%;}
 
-.active-grid-circle {
-    display: grid;
-    width: 100%;
-}
+.nav-grid {padding: 0; margin: 0; display: grid; grid-template-columns: 1fr 1fr 1fr;}
 
-.nav-grid {
-    padding: 0;
-    margin: 0;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-/* .nav-circle {
-    position: relative; 
-    display: flex; 
-    flex: none; 
-    align-items: center; 
-    justify-content: center; 
-    height: 56px; 
-    padding-left: 12px;
-    padding-right: 12px; 
-    font-size: 15px; 
-    line-height: 22px; 
-    color: #959595; 
-    white-space: nowrap; 
-    border-bottom: 1px solid #ebebeb;
-} */
-.nav-circle {
-    width: 100%;
-    height: 0.125rem;
-    /* height: 0.1rem; */
-    /* height: 0.6rem; */
-    /* border-radius: 100px; */
-    background: #333;
-    position: relative;
-    /* margin: auto auto -4.2rem; */
-    margin: 0 auto;
-    /* bottom: 8.6rem; */
-    left: 0;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    transition: 0.355s cubic-bezier(0.46, 0.03, 0.52, 0.96);
-}
-.nav-grid .nav-grid-items {
-    position: relative;
-    line-height: 22px;
-    /* padding-left: 12px;
-    padding-right: 12px; */
-    font-size: 15px;
-    /* height: 56px; */
-    padding: 16px 12.5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-}
-.nav-grid .nav-grid-items .icon {
-    color: #959595;
-    font-size: 15px;
-    /* font-size: 2.8rem; */
-}
+.nav-circle {width: 100%; height: 0.125rem; background: #333; position: relative ;margin: 0 auto; left: 0; display: none; justify-content: center; align-items: center; transition: 0.355s cubic-bezier(0.46, 0.03, 0.52, 0.96);}
+.nav-grid .nav-grid-items {position: relative; line-height: 22px; font-size: 15px; padding: 16px 12.5px; display: flex; align-items: center; justify-content: center; cursor: pointer;}
+.nav-grid .nav-grid-items .icon {color: #959595; font-size: 15px;}
 .nav-grid .nav-grid-items:hover .icon {color: #333;}
-.nav-grid .nav-grid-items.active .icon {
-    font-weight: 700;
-    letter-spacing: -0.03em;
-    color: #333;
-}
-.grid-item-active {
-    display: flex !important;
-    align-items: center;
-    justify-content: center;
-    -webkit-animation: zoomIn 0.255s cubic-bezier(0.46, 0.03, 0.21, 0.93);
-    animation: zoomIn 0.255s cubic-bezier(0.46, 0.03, 0.21, 0.93);
-}
-/* .container.theme-dark .wrap {
-    background: #212121;
-}
-.container.theme-dark .nav-grid .nav-grid-items .icon {
-    color: #eee;
-}
-.container.theme-dark .nav-grid .nav-grid-items.active .icon {
-    color: #f24c5e;
-} */
+.nav-grid .nav-grid-items.active .icon {font-weight: 700; letter-spacing: -0.03em; color: #333;}
+.grid-item-active {display: flex !important; align-items: center; justify-content: center; -webkit-animation: zoomIn 0.255s cubic-bezier(0.46, 0.03, 0.21, 0.93); animation: zoomIn 0.255s cubic-bezier(0.46, 0.03, 0.21, 0.93);}
+
 @keyframes zoomIn {
-    from {
-        opacity: 0;
-        -webkit-transform: scale3d(0.3, 0.3, 0.3);
-        transform: scale3d(0.3, 0.3, 0.3);
-    }
-    50% {
-        opacity: 1;
-    }
+    from {opacity: 0;-webkit-transform: scale3d(0.3, 0.3, 0.3);transform: scale3d(0.3, 0.3, 0.3);}
+    50% {opacity: 1;}
 }
-.zoomIn {
-    -webkit-animation-name: zoomIn;
-    animation-name: zoomIn;
-}
+.zoomIn {-webkit-animation-name: zoomIn;animation-name: zoomIn;}
 @keyframes moveActive {
-    0% {
-        width: 0.6rem;
-    }
-    20% {
-        width: 3rem;
-    }
-    100% {
-        width: 1.5rem;
-    }
+    0% {width: 0.6rem;}
+    20% {width: 3rem;}
+    100% {width: 1.5rem;}
 }
