--- a/css/toggleTesting.css
+++ b/css/toggleTesting.css
@@ -3,3 +3,11 @@
 .c2 {background: pink;}
 .c3 {background: skyblue;}
 .flipped {background: orange;}
+
+.dropbtn {background-color: #ea2129;color: white;padding: 16px;font-size: 16px;border: none;}
+.dropdown {position: relative;display: inline-block;}
+.dropdown-content {display: none;position: absolute;background-color: #f1f1f1;min-width: 160px;box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);z-index: 1;}
+.dropdown-content a {color: black;padding: 12px 16px;text-decoration: none;display: block;}
+.dropdown-content a:hover {background-color: #ddd;}
+.dropdown:after .dropdown-content {display: block;}
+.dropdown:after .dropbtn {background-color: #3e8e41;}
