--- a/css/SwipperExample.css
+++ b/css/SwipperExample.css
@@ -1,1 +1,6 @@
 html, body {position: relative; height: 100%;}
+body {background: #eee; margin: 0; padding: 0;}
+.swiper-container {width: 100%; height: 100%;}
+.swiper-slide {text-align: center; font-size: 18px; background: #fff; display: flex; justify-content: center; align-items: center;}
+.swiper-pagination-bullet {width: 12px; height: 12px; background: transparent; border: 1px solid pink; opacity: 1;}
+.swiper-pagination-bullet-active {width: 40px; transition: width .5s; border-radius: 5px; background: pink; border: 1px solid transparent;}
