--- a/css/SwipperExample.css
+++ b/css/SwipperExample.css
@@ -9,30 +9,9 @@ body {background: #eee; margin: 0; padding: 0;}
 /* .swiper-button-next {} */
 /* .swiper-pagination {position: relative; z-index: 5; top: 20px;} */
 /* .swiper-button-next, .swiper-button-prev {color: pink !important;} */
-.swiper-button-next {
-    position: absolute;
-    right: 38%;
-    width: 100px;
-    height: 100px;
-    background: url(/Project/Publishing/Layout_Testing/resources/img/icon-location.png) no-repeat;
-    background-size: 50% auto;
-    background-position: center;
-    transform: rotate(180deg);
-}
-
-.swiper-button-prev {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    background: url(/Project/Publishing/Layout_Testing/resources/img/icon-location.png) no-repeat;
-    background-size: 50% auto;
-    background-position: center;
-}
-
-.swiper-button-next::after,
-.swiper-button-prev::after {
-  display: none;
-}
+.swiper-button-next {position: absolute; right: 38%; width: 100px; height: 100px; background: url(/Project/Publishing/Layout_Testing/resources/img/icon-location.png) no-repeat; background-size: 50% auto; background-position: center; transform: rotate(180deg);}
+.swiper-button-prev {position: absolute; width: 100px; height: 100px; background: url(/Project/Publishing/Layout_Testing/resources/img/icon-location.png) no-repeat; background-size: 50% auto; background-position: center;}
+.swiper-button-next::after, .swiper-button-prev::after {display: none;}
 .swiper-pagination {min-width: 100%; margin-left: -17.5%; margin-top: 1%; justify-content: center;}
 /* .swiper-pagination {position: relative; height: auto; margin-bottom: 75px; display: flex; justify-content: center; top: 30px;} */
 .swiper-pagination-bullet {width: 12px; height: 12px; background: transparent; border: 1px solid pink; opacity: 1; justify-content: space-between;}
