--- a/css/CenterImage.css
+++ b/css/CenterImage.css
@@ -1,4 +1,12 @@
 html {height: 100%;}
 body {position: relative; width: 100%; height: 100%;}
 .top-logo {position: absolute; top: 50%; left: 50%; margin: -150px 0 0 -150px;}
-/* .bottom-logo {position: absolute; top: 75%; left: 50%; margin: -150px 0 0 -150px;} */
+.bottom-logo {position: absolute; top: 75%; left: 50%; margin: -150px 0 0 -150px;}
+
+@media (max-width: 500px) {
+    html {height: 100%;}
+    body {position: relative; width: 100%; height: 100%;}
+    .top-logo {height: 50px; margin: -150px 0 0 -150px;}
+    .bottom-logo {height: 50px; margin: -150px 0 0 -150px;}
+    /* .top-logo {position: absolute; height: 300px;} */
+}
