--- a/css/DividerLine.css
+++ b/css/DividerLine.css
@@ -5,6 +5,6 @@ main {position: relative; width: 100%;}
 .screen-main {height: 100vh;}
 
 .screen-list {width: 100%; height: 100%; display: flex; align-items: center; justify-content: center;}
-.screen-list ul {list-style: none; padding: 0; width: 20%;}
-.screen-list ul li {padding: .5em 0; border-bottom: 1px solid #CCC;}
+.screen-list ul {list-style: none; padding: 15px 15px; width: 20%; border: 1px solid #000; background-color: #f3f3f3;}
+.screen-list ul li {padding: .5em 0; border-bottom: 1px solid #000;}
 .screen-list ul li.last-child {border-bottom: 0;}
