--- a/css/NonSwiperFeature.css
+++ b/css/NonSwiperFeature.css
@@ -1,4 +1,10 @@
 *{margin: 0 auto; padding: 0;}
 /* html {width: 100%;} */
 main {display: flex; justify-content: center; align-items: center; min-height: 100vh; background-color: #fff;}
-.swiper {padding: 250px;}
+.swiper {padding: 250px; display: table; overflow: hidden; }
+.swiper-wrapper {display: table; position: absolute; width: 750px; height: 350px;}
+
+.swiper-paging {display: flex; align-self: bottom; white-space: nowrap;}
+.swiper-paging a {width: 8px; height: 6px; border-radius: 3px; font-size: 0; line-height: 0; opacity: 1; background-color: #959595; transition: width .25s cubic-bezier(0.0, 0.0, 0.2, 1);} 
+.swiper-paging a + a {margin-left: 8px;}
+.swiper-paging .selected {width: 20px; background-color: #333 !important; border-color: #000; pointer-events: none;}
